@@ -602,6 +602,17 @@ let string_of_modfile mp =
     modfile_mps := MPmap.add mp s' !modfile_mps;
     s'
 
+(* same as [string_of_modfile], but preserves the capital/uncapital 1st char *)
+
+let file_of_modfile mp =
+  let s0 = match mp with
+    | MPfile f -> string_of_id (List.hd (repr_dirpath f))
+    | _ -> assert false
+  in
+  let s = String.copy (string_of_modfile mp) in
+  if s.[0] <> s0.[0] then s.[0] <- s0.[0];
+  s
+
 let add_blacklist_entries l =
   blacklist_table :=
     List.fold_right (fun s -> Idset.add (id_of_string (String.capitalize s)))
